# self-contained-python-repo-poetry

./: README.md  openai-api-starter.ipynb  pyproject.toml  requirements.txt  train_mnist.py
