[tool.poetry]
name = "self-contained-python-repo-poetry"
version = "0.1.0"
description = ""
authors = ["Harry Wang <harryjwang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.35.13"
tqdm = "^4.66.4"
torch = "^2.3.1"
torchvision = "^0.18.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
